<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/gameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/mangatb"
        android:padding="24dp"
        android:text="@string/GameOver"
        android:textSize="50sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/finalLEvel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/mangatb"
        android:padding="24dp"
        android:text="@string/niveau"
        android:textSize="25sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/finalScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/mangatb"
        android:padding="24dp"
        android:text="@string/actual_score"
        android:textSize="25sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/highscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        android:fontFamily="@font/mangatb"
        android:text="@string/highscore"
        android:textSize="20sp"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/GameOverButton"
        android:layout_width="260dp"
        android:layout_height="97dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:backgroundTint="#EC7122"
        android:textColor="#000000"
        android:fontFamily="@font/mangatb"
        android:textSize="20sp"
        android:text="@string/BackToMenu" />

</LinearLayout>
