<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="#EC7122"
            android:fontFamily="@font/mangatb"
            android:text="menu"
            android:textColor="#000000"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/mangatb"
                android:text="@string/highscore"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/mangatb"
                android:text="@string/actual_score"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/mangatb"
                android:text="@string/vies"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="97dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageButton
            android:id="@+id/red_button"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="Salmon Game Button Red"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/bouton_base_rouge" />

        <ImageButton
            android:id="@+id/green_button"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_gravity="left|center"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="Salmon Game Button Green"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/bouton_base_vert" />

        <ImageButton
            android:id="@+id/blue_button"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_gravity="left|center"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="Salmon Game Button Blue"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/bouton_base_bleu" />

        <ImageButton
            android:id="@+id/yellow_button"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="Salmon Game Button Yellow"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/bouton_base_jaune" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/mangatb"
        android:text="@string/niveau"
        android:textColor="@color/black"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>